# jai-mcp

./: .env.example  ARCHITECTURE.md  ISSUE_TEMPLATE.md  PROJECT_STRUCTURE.md  README.md  TIME_ANALYSIS.md  package.json  pyproject.toml
jai_mcp/: __init__.py  __version__.py  config.py  server.py
jai_mcp/client/: __init__.py  api.py
jai_mcp/gateway/: __init__.py  auth.py  logging.py  main.py  proxy.py
jai_mcp/tools/: __init__.py  health.py  modules.py
